[gd_scene load_steps=4 format=3 uid="uid://bdd7ut5xh0dr8"]

[ext_resource type="Script" path="res://levels/ui/main_scene.gd" id="1_e181m"]
[ext_resource type="AudioStream" uid="uid://ha78di37nnwh" path="res://audio/poly/selecttt.wav" id="2_an8w3"]
[ext_resource type="LabelSettings" uid="uid://dhtvwsreuixrs" path="res://sprite/ui/title.tres" id="3_i85gf"]

[node name="MainScene" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e181m")

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_an8w3")
volume_db = 6.5
pitch_scale = 1.34

[node name="Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
offset_left = -364.0
offset_top = -440.0
offset_right = 388.0
offset_bottom = 456.0
color = Color(0.121569, 0.121569, 0.207843, 1)

[node name="vbox" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
offset_left = -100.0
offset_top = -16.0
offset_right = 108.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="level_selbtn" type="Button" parent="Menu/vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Select"

[node name="Label" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = 360.0
offset_right = 52.0
offset_bottom = 386.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "@hadahlia"
horizontal_alignment = 1

[node name="TitleTemp" type="Label" parent="Menu"]
layout_mode = 0
offset_left = -188.0
offset_top = -224.0
offset_right = 188.0
offset_bottom = -57.0
theme_override_font_sizes/font_size = 100
text = "MALICE-S"
label_settings = ExtResource("3_i85gf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level_Select" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="Level_Select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -448.0
offset_right = 376.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.0156863, 0.0823529, 1)

[node name="TextureButton" type="TextureButton" parent="Level_Select"]
visible = false
layout_mode = 0
offset_left = 673.0
offset_top = 280.0
offset_right = 713.0
offset_bottom = 320.0

[node name="BoxContainer" type="BoxContainer" parent="Level_Select"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -64.0
offset_right = 104.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Level_Select/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="level_1" type="Button" parent="Level_Select/BoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "L1"

[node name="MarginContainer2" type="MarginContainer" parent="Level_Select/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="level_2" type="Button" parent="Level_Select/BoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
disabled = true
text = "??
"

[node name="MarginContainer3" type="MarginContainer" parent="Level_Select/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="level_3" type="Button" parent="Level_Select/BoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
disabled = true
text = "??
"

[node name="MarginContainer4" type="MarginContainer" parent="Level_Select/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="level_4" type="Button" parent="Level_Select/BoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
disabled = true
text = "??"

[node name="MarginContainer" type="MarginContainer" parent="Level_Select"]
layout_mode = 0
offset_left = -44.0
offset_top = -216.0
offset_right = 44.0
offset_bottom = -176.0

[node name="return_btn" type="Button" parent="Level_Select/MarginContainer"]
layout_mode = 2
text = "<---- ^~^
"

[node name="MarginContainer2" type="MarginContainer" parent="Level_Select"]
layout_mode = 0
offset_left = -44.0
offset_top = 256.0
offset_right = 44.0
offset_bottom = 296.0

[node name="debug_btn" type="Button" parent="Level_Select/MarginContainer2"]
layout_mode = 2
text = "DEBUG
"

[node name="God" type="Node2D" parent="."]

[node name="Cammy" type="Camera2D" parent="God"]
anchor_mode = 0

[connection signal="pressed" from="Menu/vbox/level_selbtn" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Level_Select/BoxContainer/MarginContainer/level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level_Select/MarginContainer/return_btn" to="." method="_on_return_btn_pressed"]
[connection signal="pressed" from="Level_Select/MarginContainer2/debug_btn" to="." method="_on_debug_btn_pressed"]
